--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   flutter_easyloading: ^3.0.5
   google_fonts: ^4.0.3
   icons_plus: ^3.0.0
+  string_validator: ^0.3.0
+  water_drop_nav_bar: ^2.2.0+5
 
 dev_dependencies:
   flutter_test:
