--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   icons_plus: ^3.0.0
   string_validator: ^0.3.0
   water_drop_nav_bar: ^2.2.0+5
+  cached_network_image: ^3.2.3
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
+  google_maps_flutter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +37,8 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   build_runner: ^2.3.3
   icons_launcher: ^2.0.7
+  freezed: ^2.3.2
+  json_serializable: ^6.6.1
 
 dependency_overrides:
   path: ^1.8.3
