--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,15 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   google_maps_flutter: ^2.2.3
+  open_filex: ^4.3.2
+  path: ^1.8.3
+  path_provider: ^2.0.12
+  url_launcher: ^6.1.9
+  timelines: ^0.1.0
+  file_picker: ^5.2.5
+  pinput: ^2.2.30
+  google_maps_place_picker_mb: ^3.0.1
+  multi_select_flutter: ^4.1.3
 
 dev_dependencies:
   flutter_test:
