--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   get_it: ^7.2.0
   flutter_easyloading: ^3.0.5
   google_fonts: ^4.0.3
-  icons_plus: ^3.0.0
+  icons_plus: ^4.0.0
   string_validator: ^0.3.0
   water_drop_nav_bar: ^2.2.0+5
   cached_network_image: ^3.2.3
@@ -36,8 +36,11 @@ dependencies:
   timelines: ^0.1.0
   file_picker: ^5.2.5
   pinput: ^2.2.30
-  google_maps_place_picker_mb: ^3.0.1
+#  google_maps_place_picker_mb: ^3.0.1
   multi_select_flutter: ^4.1.3
+  smooth_star_rating_null_safety: ^1.0.4+2
+#  location_picker_flutter_map: ^1.2.0
+  flutter_place_picker: ^0.0.1-dev.4
 
 dev_dependencies:
   flutter_test:
@@ -45,7 +48,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.1
   build_runner: ^2.3.3
-  icons_launcher: ^2.0.7
+  icons_launcher: ^2.1.0
   freezed: ^2.3.2
   json_serializable: ^6.6.1
 
