--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         android:icon="@mipmap/ic_launcher">
 
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC6Rw5gSv4xuudm3BxVNB6KEtzj3hfK-fw"/>
+            android:value=""/>
 
         <activity
             android:name=".MainActivity"
